Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

0.070     2014-09-25 17:36:54-04:00 America/New_York

    [*** INCOMPATIBLE CHANGES ***]

    - Switched version handling from Git::NextVersion + OurPkgVersion to
      RewriteVerson + BumpVersionAfterRelease so that files in the repo
      will have a $VERSION.  This will require adding a $VERSION statement
      back to all modules before releasing.  Also added an "auto_version"
      option to allow AutoVersion + PkgVersion for distributions that need
      it.

    [CHANGED]

    - No longer allows dirty files at release time

    - Switched from ContributorsFromGit to Git::Contributors and updated
      Pod::Weaver::Section::Contributors prereq to match

0.069     2014-07-29 14:17:19-04:00 America/New_York

    [CHANGED]

    - Bumped Test::ReportPrereqs dependency to 0.016 because I'm an idiot

0.068     2014-07-29 13:39:29-04:00 America/New_York

    [CHANGED]

    - Bumped Test::ReportPrereqs dependency to 0.015

0.067     2014-04-17 16:43:11-04:00 America/New_York

    [ADDED]

    - Added Git::CheckFor::CorrectBranch plugin

0.066     2014-03-28 17:05:19-04:00 America/New_York

    [CHANGED]

    - Switched back to MinimumPerl; MinimumPerlFast isn't quite stable
      enough yet for me to depend on it

0.065     2014-03-23 07:48:28-04:00 America/New_York

    [CHANGED]

    - set default_jobs = 9 for RunExtraTests plugin

0.064     2014-03-16 22:28:53+01:00 Europe/Paris

    [CHANGED]

    - Switched from MinimumPerl to MinimumPerlFast

0.063     2014-03-16 17:03:18+01:00 Europe/Paris

    [CHANGED]

    - Removed ununsed autodie and Moose::AutoBox

    - set default_jobs = 9 for MakeMaker plugin

0.062     2014-02-02 21:13:10-05:00 America/New_York

    [FIXED]

    - Fixed breakage from Config::MVP 2.200007

0.061     2014-01-15 19:39:55-05:00 America/New_York

    [CHANGED]

    - Actually, we need Pod::Elemental::PerlMunger 2.000001

0.060     2014-01-15 09:35:50-05:00 America/New_York
